--- a/m___cj_one.html
+++ b/m___cj_one.html
@@ -25,83 +25,83 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u164" class="ax_default image">
-        <img id="u164_img" class="img " src="images/m___cj_one/u164.png"/>
+      <div id="u154" class="ax_default image">
+        <img id="u154_img" class="img " src="images/m___cj_one/u154.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u165" class="ax_default image">
-        <img id="u165_img" class="img " src="images/m___cj_one/u165.png"/>
+      <div id="u155" class="ax_default image">
+        <img id="u155_img" class="img " src="images/m___cj_one/u155.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u166" class="ax_default box_1">
-        <img id="u166_img" class="img " src="images/m___cj_one/u166.png"/>
-        <div id="u166_text" class="text ">
-          <p><span>신용카드 (간편결제: 현대카드)</span></p>
+      <div id="u156" class="ax_default box_1">
+        <img id="u156_img" class="img " src="images/m___cj_one/u156.png"/>
+        <div id="u156_text" class="text ">
+          <p><span>신용카드 (현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u167" class="ax_default box_1">
-        <img id="u167_img" class="img " src="images/m___cj_one/u167.png"/>
-        <div id="u167_text" class="text ">
-          <p><span>&nbsp; 휴대폰(SKP : 010-****-1234)&nbsp; </span></p>
+      <div id="u157" class="ax_default box_1">
+        <img id="u157_img" class="img " src="images/m___cj_one/u157.png"/>
+        <div id="u157_text" class="text ">
+          <p><span>신용카드 정기결제 (현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u168" class="ax_default box_1">
-        <img id="u168_img" class="img " src="images/m___cj_one/u168.png"/>
-        <div id="u168_text" class="text ">
+      <div id="u158" class="ax_default box_1">
+        <img id="u158_img" class="img " src="images/m___cj_one/u158.png"/>
+        <div id="u158_text" class="text ">
           <p><span>신용카드 (간편결제-현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u169" class="ax_default box_1">
-        <img id="u169_img" class="img " src="images/m___cj_one/u167.png"/>
-        <div id="u169_text" class="text ">
-          <p><span>&nbsp; 휴대폰(SKP : 010-****-1234)&nbsp; </span></p>
+      <div id="u159" class="ax_default box_1">
+        <img id="u159_img" class="img " src="images/m___cj_one/u158.png"/>
+        <div id="u159_text" class="text ">
+          <p><span>&nbsp; 휴대폰(010-****-1234)&nbsp; </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u170" class="ax_default box_1">
-        <img id="u170_img" class="img " src="images/m___cj_one/u170.png"/>
+      <div id="u160" class="ax_default box_1">
+        <img id="u160_img" class="img " src="images/m___cj_one/u160.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u171" class="ax_default box_1">
-        <div id="u171_div" class=""></div>
+      <div id="u161" class="ax_default box_1">
+        <div id="u161_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u172" class="ax_default box_1">
-        <div id="u172_div" class=""></div>
-        <div id="u172_text" class="text ">
+      <div id="u162" class="ax_default box_1">
+        <div id="u162_div" class=""></div>
+        <div id="u162_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u172_ann" class="annotation"></div>
+      <div id="u162_ann" class="annotation"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u173" class="ax_default box_1">
-        <img id="u173_img" class="img " src="images/m___cj_one/u173.png"/>
-        <div id="u173_text" class="text ">
+      <div id="u163" class="ax_default box_1">
+        <img id="u163_img" class="img " src="images/m___cj_one/u163.png"/>
+        <div id="u163_text" class="text ">
           <p><span>나의 결제내역</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u174" class="ax_default box_1">
-        <div id="u174_div" class=""></div>
+      <div id="u164" class="ax_default box_1">
+        <div id="u164_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u174_ann" class="annotation"></div>
+      <div id="u164_ann" class="annotation"></div>
     </div>
   </body>
 </html>
