--- a/다운로드_상품__잔여곡수_추가_.html
+++ b/다운로드_상품__잔여곡수_추가_.html
@@ -25,64 +25,64 @@
     <div id="base" class="">
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u175" class="ax_default box_1">
-        <div id="u175_div" class=""></div>
-        <div id="u175_text" class="text ">
+      <div id="u165" class="ax_default box_1">
+        <div id="u165_div" class=""></div>
+        <div id="u165_text" class="text ">
           <p><span>CASE : 다운로드 상품 이용시, 사용중인 이용권의 다운로드 잔여횟수 추가 노출</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u176" class="ax_default box_1">
-        <div id="u176_div" class=""></div>
+      <div id="u166" class="ax_default box_1">
+        <div id="u166_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u177" class="ax_default box_1">
-        <div id="u177_div" class=""></div>
-        <div id="u177_text" class="text ">
+      <div id="u167" class="ax_default box_1">
+        <div id="u167_div" class=""></div>
+        <div id="u167_text" class="text ">
           <p><span>Status Bar</span></p>
         </div>
       </div>
 
       <!-- 다운로드건수-사용중인 이용권 (Dynamic Panel) -->
-      <div id="u178" class="ax_default" data-label="다운로드건수-사용중인 이용권">
-        <div id="u178_state0" class="panel_state" data-label="스마트폰" style="">
-          <div id="u178_state0_content" class="panel_state_content">
+      <div id="u168" class="ax_default" data-label="다운로드건수-사용중인 이용권">
+        <div id="u168_state0" class="panel_state" data-label="스마트폰" style="">
+          <div id="u168_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u179" class="ax_default heading_1">
-              <div id="u179_div" class=""></div>
-              <div id="u179_text" class="text ">
+            <div id="u169" class="ax_default heading_1">
+              <div id="u169_div" class=""></div>
+              <div id="u169_text" class="text ">
                 <p><span>듣기 + 스마트폰 00곡 저장</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u180" class="ax_default heading_1">
-              <div id="u180_div" class=""></div>
-              <div id="u180_text" class="text ">
-                <p><span>듣기 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span>스마트폰 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span>스마트폰 다운로드 잔여 곡 수 : 30곡</span></p>
+            <div id="u170" class="ax_default heading_1">
+              <div id="u170_div" class=""></div>
+              <div id="u170_text" class="text ">
+                <p><span>이용기간</span></p><p><span>듣기 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span>스마트폰 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span><br></span></p><p><span>잔여 곡 수 </span></p><p><span>스마트폰 저장 : 30곡</span></p>
               </div>
             </div>
           </div>
         </div>
-        <div id="u178_state1" class="panel_state" data-label="mp3" style="visibility: hidden;">
-          <div id="u178_state1_content" class="panel_state_content">
+        <div id="u168_state1" class="panel_state" data-label="mp3" style="visibility: hidden;">
+          <div id="u168_state1_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u181" class="ax_default heading_1">
-              <div id="u181_div" class=""></div>
-              <div id="u181_text" class="text ">
+            <div id="u171" class="ax_default heading_1">
+              <div id="u171_div" class=""></div>
+              <div id="u171_text" class="text ">
                 <p><span>[개월]MP3 100</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u182" class="ax_default heading_1">
-              <div id="u182_div" class=""></div>
-              <div id="u182_text" class="text ">
-                <p><span>MP3 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span>MP3 다운로드 잔여 곡 수 : 30곡</span></p>
+            <div id="u172" class="ax_default heading_1">
+              <div id="u172_div" class=""></div>
+              <div id="u172_text" class="text ">
+                <p><span>이용기간</span></p><p><span>MP3 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span><br></span></p><p><span>잔여 곡 수</span></p><p><span>MP3 저장 : 30곡</span></p>
               </div>
             </div>
           </div>
@@ -90,96 +90,96 @@
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u183" class="ax_default line">
-        <img id="u183_img" class="img " src="images/정기상품__결제대기_상태안내_/u123.png"/>
+      <div id="u173" class="ax_default line">
+        <img id="u173_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u173.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u184" class="ax_default line">
-        <img id="u184_img" class="img " src="images/정기상품__결제대기_상태안내_/u124.png"/>
+      <div id="u174" class="ax_default line">
+        <img id="u174_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u174.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u185" class="ax_default heading_1">
-        <div id="u185_div" class=""></div>
-        <div id="u185_text" class="text ">
+      <div id="u175" class="ax_default heading_1">
+        <div id="u175_div" class=""></div>
+        <div id="u175_text" class="text ">
           <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u186" class="ax_default box_1">
-        <img id="u186_img" class="img " src="images/정기상품__결제대기_상태안내_/u126.png"/>
-        <div id="u186_text" class="text ">
+      <div id="u176" class="ax_default box_1">
+        <img id="u176_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u176.png"/>
+        <div id="u176_text" class="text ">
           <p><span>사용중인 이용권</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u187" class="ax_default line">
-        <img id="u187_img" class="img " src="images/정기상품__결제대기_상태안내_/u123.png"/>
+      <div id="u177" class="ax_default line">
+        <img id="u177_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u173.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u188" class="ax_default box_1">
-        <img id="u188_img" class="img " src="images/정기상품__결제대기_상태안내_/u126.png"/>
-        <div id="u188_text" class="text ">
+      <div id="u178" class="ax_default box_1">
+        <img id="u178_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u176.png"/>
+        <div id="u178_text" class="text ">
           <p><span>보관중인 이용권</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u189" class="ax_default heading_1">
-        <div id="u189_div" class=""></div>
-        <div id="u189_text" class="text ">
+      <div id="u179" class="ax_default heading_1">
+        <div id="u179_div" class=""></div>
+        <div id="u179_text" class="text ">
           <p><span>보관중인 이용권이 없습니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u190" class="ax_default box_1">
-        <div id="u190_div" class=""></div>
-        <div id="u190_text" class="text ">
+      <div id="u180" class="ax_default box_1">
+        <div id="u180_div" class=""></div>
+        <div id="u180_text" class="text ">
           <p><span>이용권구매</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u191" class="ax_default box_1">
-        <div id="u191_div" class=""></div>
-        <div id="u191_text" class="text ">
+      <div id="u181" class="ax_default box_1">
+        <div id="u181_div" class=""></div>
+        <div id="u181_text" class="text ">
           <p><span>쿠폰 등록하기</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Ellipse) -->
-      <div id="u192" class="ax_default ellipse">
-        <img id="u192_img" class="img " src="images/정기상품__결제대기_상태안내_/u132.png"/>
-        <div id="u192_text" class="text ">
+      <div id="u182" class="ax_default ellipse">
+        <img id="u182_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u182.png"/>
+        <div id="u182_text" class="text ">
           <p><span>X</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u193" class="ax_default paragraph">
-        <div id="u193_div" class=""></div>
+      <div id="u183" class="ax_default paragraph">
+        <div id="u183_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u194" class="ax_default box_1">
-        <div id="u194_div" class=""></div>
+      <div id="u184" class="ax_default box_1">
+        <div id="u184_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u195" class="ax_default box_1">
-        <div id="u195_div" class=""></div>
-        <div id="u195_text" class="text ">
+      <div id="u185" class="ax_default box_1">
+        <div id="u185_div" class=""></div>
+        <div id="u185_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u195_ann" class="annotation"></div>
+      <div id="u185_ann" class="annotation"></div>
     </div>
   </body>
 </html>
