--- a/1__프로젝트_개요.html
+++ b/1__프로젝트_개요.html
@@ -167,16 +167,25 @@
         <!-- Unnamed (Table Cell) -->
         <div id="u22" class="ax_default table_cell">
           <img id="u22_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u22_text" class="text ">
+            <p><span>2018.05.31</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u23" class="ax_default table_cell">
           <img id="u23_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u23_text" class="text ">
+            <p><span>0.1</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u24" class="ax_default table_cell">
           <img id="u24_img" class="img " src="images/1__프로젝트_개요/u21.png"/>
+          <div id="u24_text" class="text ">
+            <p><span>김민진</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
