--- a/m___cj_one.html
+++ b/m___cj_one.html
@@ -25,83 +25,91 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u154" class="ax_default image">
-        <img id="u154_img" class="img " src="images/m___cj_one/u154.png"/>
+      <div id="u156" class="ax_default image">
+        <img id="u156_img" class="img " src="images/m___cj_one/u156.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u155" class="ax_default image">
-        <img id="u155_img" class="img " src="images/m___cj_one/u155.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u156" class="ax_default box_1">
-        <img id="u156_img" class="img " src="images/m___cj_one/u156.png"/>
-        <div id="u156_text" class="text ">
-          <p><span>신용카드 (현대카드)</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u157" class="ax_default box_1">
+      <div id="u157" class="ax_default image">
         <img id="u157_img" class="img " src="images/m___cj_one/u157.png"/>
-        <div id="u157_text" class="text ">
-          <p><span>신용카드 정기결제 (현대카드)</span></p>
-        </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u158" class="ax_default box_1">
         <img id="u158_img" class="img " src="images/m___cj_one/u158.png"/>
         <div id="u158_text" class="text ">
-          <p><span>신용카드 (간편결제-현대카드)</span></p>
+          <p><span>신용카드 (현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u159" class="ax_default box_1">
-        <img id="u159_img" class="img " src="images/m___cj_one/u158.png"/>
+        <img id="u159_img" class="img " src="images/m___cj_one/u159.png"/>
         <div id="u159_text" class="text ">
-          <p><span>&nbsp; 휴대폰(010-****-1234)&nbsp; </span></p>
+          <p><span>신용카드 정기결제 (현대카드)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u160" class="ax_default box_1">
         <img id="u160_img" class="img " src="images/m___cj_one/u160.png"/>
+        <div id="u160_text" class="text ">
+          <p><span>신용카드 (간편결제-현대카드)</span></p>
+        </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u161" class="ax_default box_1">
-        <div id="u161_div" class=""></div>
+        <img id="u161_img" class="img " src="images/m___cj_one/u160.png"/>
+        <div id="u161_text" class="text ">
+          <p><span>&nbsp; 휴대폰(010-****-1234)&nbsp; </span></p>
+        </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u162" class="ax_default box_1">
-        <div id="u162_div" class=""></div>
-        <div id="u162_text" class="text ">
-          <p><span>CASE</span></p>
-        </div>
+        <img id="u162_img" class="img " src="images/m___cj_one/u162.png"/>
       </div>
-
-      <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u162_ann" class="annotation"></div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u163" class="ax_default box_1">
-        <img id="u163_img" class="img " src="images/m___cj_one/u163.png"/>
-        <div id="u163_text" class="text ">
-          <p><span>나의 결제내역</span></p>
-        </div>
+        <div id="u163_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u164" class="ax_default box_1">
         <div id="u164_div" class=""></div>
+        <div id="u164_text" class="text ">
+          <p><span>CASE</span></p>
+        </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
       <div id="u164_ann" class="annotation"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u165" class="ax_default box_1">
+        <img id="u165_img" class="img " src="images/m___cj_one/u165.png"/>
+        <div id="u165_text" class="text ">
+          <p><span>나의 결제내역</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u166" class="ax_default box_1">
+        <div id="u166_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [footnote] -->
+      <div id="u166_ann" class="annotation"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u167" class="ax_default heading_1">
+        <div id="u167_div" class=""></div>
+        <div id="u167_text" class="text ">
+          <p><span>- 차후 진행 예정 - </span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
