--- a/이용권내역.html
+++ b/이용권내역.html
@@ -294,6 +294,22 @@
 
       <!-- Unnamed (Rectangle) [footnote] -->
       <div id="u153_ann" class="annotation"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u154" class="ax_default heading_1">
+        <div id="u154_div" class=""></div>
+        <div id="u154_text" class="text ">
+          <p><span>- 차후 진행 예정 - </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u155" class="ax_default heading_1">
+        <div id="u155_div" class=""></div>
+        <div id="u155_text" class="text ">
+          <p><span>- 차후 진행 예정 - </span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
