정기결제 상태 및 사유추가
정기결제 상태 및 사유추가

--- a/정기상품__결제대기_상태안내_.html
+++ b/정기상품__결제대기_상태안내_.html
@@ -24,136 +24,79 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u231" class="ax_default image">
+        <img id="u231_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u126.png"/>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u232" class="ax_default image">
+        <img id="u232_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u142.png"/>
+      </div>
+
       <!-- Unnamed (Rectangle) -->
-      <div id="u119" class="ax_default box_1">
-        <div id="u119_div" class=""></div>
-        <div id="u119_text" class="text ">
-          <p><span>정기 상품을 이용 중이나, 명의변경, 번호변경 등의 문제로 정기 상품의 결제가 정상적으로 이루어 지지 않았을 경우 현상태 및 사유 안내 추가</span></p>
+      <div id="u233" class="ax_default box_1">
+        <div id="u233_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u234" class="ax_default box_1">
+        <img id="u234_img" class="img " src="images/정기상품__결제대기_상태안내_/u234.png"/>
+        <div id="u234_text" class="text ">
+          <p><span><br></span></p><p><span>-</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u120" class="ax_default paragraph">
-        <div id="u120_div" class=""></div>
-        <div id="u120_text" class="text ">
-          <p><span style="font-family:'나눔고딕';font-weight:400;">&nbsp;</span><span style="font-family:'나눔고딕 Bold', '나눔고딕';font-weight:600;">(상태 : 정기상품 결제 대기로, 타 상품 구매불가)</span></p>
+      <div id="u235" class="ax_default box_1">
+        <img id="u235_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u153.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u236" class="ax_default heading_1">
+        <div id="u236_div" class=""></div>
+        <div id="u236_text" class="text ">
+          <p><span>듣기+ 스마트폰 저장</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u121" class="ax_default box_1">
-        <div id="u121_div" class=""></div>
+      <div id="u237" class="ax_default box_1">
+        <img id="u237_img" class="img " src="images/정기상품__결제대기_상태안내_/u237.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u122" class="ax_default box_1">
-        <div id="u122_div" class=""></div>
-        <div id="u122_text" class="text ">
-          <p><span>Status Bar</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u123" class="ax_default line">
-        <img id="u123_img" class="img " src="images/정기상품__결제대기_상태안내_/u123.png"/>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u124" class="ax_default line">
-        <img id="u124_img" class="img " src="images/정기상품__결제대기_상태안내_/u124.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u125" class="ax_default heading_1">
-        <div id="u125_div" class=""></div>
-        <div id="u125_text" class="text ">
-          <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u126" class="ax_default box_1">
-        <img id="u126_img" class="img " src="images/정기상품__결제대기_상태안내_/u126.png"/>
-        <div id="u126_text" class="text ">
-          <p><span>사용중인 이용권</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u127" class="ax_default line">
-        <img id="u127_img" class="img " src="images/정기상품__결제대기_상태안내_/u123.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u128" class="ax_default box_1">
-        <img id="u128_img" class="img " src="images/정기상품__결제대기_상태안내_/u126.png"/>
-        <div id="u128_text" class="text ">
-          <p><span>보관중인 이용권</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u129" class="ax_default heading_1">
-        <div id="u129_div" class=""></div>
-        <div id="u129_text" class="text ">
-          <p><span>보관중인 이용권이 없습니다.</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u130" class="ax_default box_1">
-        <div id="u130_div" class=""></div>
-        <div id="u130_text" class="text ">
-          <p><span>이용권구매</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u131" class="ax_default box_1">
-        <div id="u131_div" class=""></div>
-        <div id="u131_text" class="text ">
-          <p><span>쿠폰 등록하기</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Ellipse) -->
-      <div id="u132" class="ax_default ellipse">
-        <img id="u132_img" class="img " src="images/정기상품__결제대기_상태안내_/u132.png"/>
-        <div id="u132_text" class="text ">
-          <p><span>X</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u133" class="ax_default box_1">
-        <div id="u133_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u133_ann" class="annotation"></div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u134" class="ax_default heading_1">
-        <div id="u134_div" class=""></div>
-        <div id="u134_text" class="text ">
-          <p><span>[정기] MP3 30</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u135" class="ax_default heading_1">
-        <div id="u135_div" class=""></div>
-        <div id="u135_text" class="text ">
+      <div id="u238" class="ax_default paragraph">
+        <div id="u238_div" class=""></div>
+        <div id="u238_text" class="text ">
           <p><span>현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u136" class="ax_default box_1">
-        <div id="u136_div" class=""></div>
-        <div id="u136_text" class="text ">
-          <p><span>정기 결제 관리</span></p>
+      <div id="u239" class="ax_default box_1">
+        <div id="u239_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u240" class="ax_default box_1">
+        <img id="u240_img" class="img " src="images/정기상품__결제대기_상태안내_/u240.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u241" class="ax_default box_1">
+        <div id="u241_div" class=""></div>
+        <div id="u241_text" class="text ">
+          <p><span>CASE</span></p>
         </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [footnote] -->
+      <div id="u241_ann" class="annotation"></div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u242" class="ax_default image">
+        <img id="u242_img" class="img " src="images/정기상품__결제대기_상태안내_/u242.png"/>
       </div>
     </div>
   </body>
