--- a/1__프로젝트_개요.html
+++ b/1__프로젝트_개요.html
@@ -214,17 +214,26 @@
 
         <!-- Unnamed (Table Cell) -->
         <div id="u28" class="ax_default table_cell">
-          <img id="u28_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <img id="u28_img" class="img " src="images/1__프로젝트_개요/u28.png"/>
+          <div id="u28_text" class="text ">
+            <p><span>2018.06.04</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u29" class="ax_default table_cell">
-          <img id="u29_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <img id="u29_img" class="img " src="images/1__프로젝트_개요/u28.png"/>
+          <div id="u29_text" class="text ">
+            <p><span>0.4</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u30" class="ax_default table_cell">
-          <img id="u30_img" class="img " src="images/1__프로젝트_개요/u21.png"/>
+          <img id="u30_img" class="img " src="images/1__프로젝트_개요/u30.png"/>
+          <div id="u30_text" class="text ">
+            <p><span>김민진</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -306,12 +315,15 @@
 
         <!-- Unnamed (Table Cell) -->
         <div id="u43" class="ax_default table_cell">
-          <img id="u43_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <img id="u43_img" class="img " src="images/1__프로젝트_개요/u43.png"/>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u44" class="ax_default table_cell">
-          <img id="u44_img" class="img " src="images/1__프로젝트_개요/u38.png"/>
+          <img id="u44_img" class="img " src="images/1__프로젝트_개요/u44.png"/>
+          <div id="u44_text" class="text ">
+            <p><span>-정기결제 상품 - 결제대기 상태일경우 현상태 및 사유 제공</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -523,31 +535,49 @@
         <!-- Unnamed (Table Cell) -->
         <div id="u72" class="ax_default table_cell">
           <img id="u72_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u72_text" class="text ">
+            <p><span>2018.06.05</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u73" class="ax_default table_cell">
           <img id="u73_img" class="img " src="images/1__프로젝트_개요/u19.png"/>
+          <div id="u73_text" class="text ">
+            <p><span>김민진</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u74" class="ax_default table_cell">
           <img id="u74_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u74_text" class="text ">
+            <p><span>올리브네트웍스</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u75" class="ax_default table_cell">
           <img id="u75_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u75_text" class="text ">
+            <p><span>박지욱, 장유리</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u76" class="ax_default table_cell">
           <img id="u76_img" class="img " src="images/1__프로젝트_개요/u37.png"/>
+          <div id="u76_text" class="text ">
+            <p><span>리뷰</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u77" class="ax_default table_cell">
           <img id="u77_img" class="img " src="images/1__프로젝트_개요/u59.png"/>
+          <div id="u77_text" class="text ">
+            <p><span>기획리뷰</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
@@ -628,7 +658,7 @@
       <div id="u92" class="ax_default flow_shape">
         <div id="u92_div" class=""></div>
         <div id="u92_text" class="text ">
-          <p><span>이용권내역</span></p>
+          <p><span>다운로드 상품 (잔여곡수 추가)</span></p>
         </div>
       </div>
 
@@ -650,12 +680,56 @@
       <div id="u94" class="ax_default flow_shape">
         <div id="u94_div" class=""></div>
         <div id="u94_text" class="text ">
-          <p><span>이용권내역</span></p>
+          <p><span>다운로드 상품 (잔여곡수 추가)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [reference page] -->
       <div id="u94_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u95" class="ax_default flow_shape">
+        <div id="u95_div" class=""></div>
+        <div id="u95_text" class="text ">
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u95_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u96" class="ax_default flow_shape">
+        <div id="u96_div" class=""></div>
+        <div id="u96_text" class="text ">
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u96_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u97" class="ax_default flow_shape">
+        <div id="u97_div" class=""></div>
+        <div id="u97_text" class="text ">
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u97_ref" class="reference_page"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u98" class="ax_default flow_shape">
+        <div id="u98_div" class=""></div>
+        <div id="u98_text" class="text ">
+          <p><span>정기상품 (결제대기 상태안내)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [reference page] -->
+      <div id="u98_ref" class="reference_page"></div>
     </div>
   </body>
 </html>
