--- a/다운로드_상품__잔여곡수_추가_.html
+++ b/다운로드_상품__잔여곡수_추가_.html
@@ -24,160 +24,290 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u171" class="ax_default box_1">
-        <div id="u171_div" class=""></div>
+      <!-- Unnamed (Image) -->
+      <div id="u126" class="ax_default image">
+        <img id="u126_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u126.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u172" class="ax_default box_1">
-        <div id="u172_div" class=""></div>
-        <div id="u172_text" class="text ">
-          <p><span>Status Bar</span></p>
-        </div>
+      <div id="u127" class="ax_default box_1">
+        <img id="u127_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u127.png"/>
       </div>
 
-      <!-- 다운로드건수-사용중인 이용권 (Dynamic Panel) -->
-      <div id="u173" class="ax_default" data-label="다운로드건수-사용중인 이용권">
-        <div id="u173_state0" class="panel_state" data-label="스마트폰" style="">
-          <div id="u173_state0_content" class="panel_state_content">
+      <!-- Unnamed (Image) -->
+      <div id="u128" class="ax_default image">
+        <img id="u128_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u128.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u129" class="ax_default box_1">
+        <img id="u129_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u129.png"/>
+      </div>
+
+      <!-- 정기 이용권 (Dynamic Panel) -->
+      <div id="u130" class="ax_default" data-label="정기 이용권">
+        <div id="u130_state0" class="panel_state" data-label="휴대푠" style="">
+          <div id="u130_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u174" class="ax_default heading_1">
-              <div id="u174_div" class=""></div>
-              <div id="u174_text" class="text ">
-                <p><span>듣기 + 스마트폰 00곡 저장</span></p>
+            <div id="u131" class="ax_default heading_1">
+              <div id="u131_div" class=""></div>
+              <div id="u131_text" class="text ">
+                <p><span>결제수단 : 휴대폰</span></p><p><span>결제수단 상세 : 010-****-1234</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u175" class="ax_default heading_1">
-              <div id="u175_div" class=""></div>
-              <div id="u175_text" class="text ">
-                <p><span>이용기간</span></p><p><span>듣기 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span>스마트폰 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span><br></span></p><p><span>잔여 곡 수 </span></p><p><span>스마트폰 저장 : 30곡</span></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="u173_state1" class="panel_state" data-label="mp3" style="visibility: hidden;">
-          <div id="u173_state1_content" class="panel_state_content">
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u176" class="ax_default heading_1">
-              <div id="u176_div" class=""></div>
-              <div id="u176_text" class="text ">
-                <p><span>[개월]MP3 100</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u177" class="ax_default heading_1">
-              <div id="u177_div" class=""></div>
-              <div id="u177_text" class="text ">
-                <p><span>이용기간</span></p><p><span>MP3 저장 : YYYY-MM-DD~YYYY-MM-DD (00일 후 만료)</span></p><p><span><br></span></p><p><span>잔여 곡 수</span></p><p><span>MP3 저장 : 30곡</span></p>
+            <div id="u132" class="ax_default shape">
+              <img id="u132_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u132.png"/>
+              <div id="u132_text" class="text ">
+                <p><span>&nbsp; 결제수단 변경&nbsp; </span></p>
               </div>
             </div>
           </div>
         </div>
+        <div id="u130_state1" class="panel_state" data-label="신카" style="visibility: hidden;">
+          <div id="u130_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u133" class="ax_default heading_1">
+              <div id="u133_div" class=""></div>
+              <div id="u133_text" class="text ">
+                <p><span>결제수단 : 신용카드</span></p><p><span>결제수단 상세 : 현대카드</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u134" class="ax_default shape">
+              <img id="u134_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u132.png"/>
+              <div id="u134_text" class="text ">
+                <p><span>&nbsp; 결제수단 변경&nbsp; </span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u130_state2" class="panel_state" data-label="포인트" style="visibility: hidden;">
+          <div id="u130_state2_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u135" class="ax_default heading_1">
+              <div id="u135_div" class=""></div>
+              <div id="u135_text" class="text ">
+                <p><span>결제수단 : TV포인트</span></p><p><span>결제수단 상세 : ?????????</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u136" class="ax_default shape">
+              <img id="u136_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u132.png"/>
+              <div id="u136_text" class="text ">
+                <p><span>&nbsp; 결제수단 변경&nbsp; </span></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u178" class="ax_default line">
-        <img id="u178_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u178.png"/>
+      <!-- 사용중인 이용권 (Dynamic Panel) -->
+      <div id="u137" class="ax_default" data-label="사용중인 이용권">
+        <div id="u137_state0" class="panel_state" data-label="휴대푠" style="">
+          <div id="u137_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u138" class="ax_default heading_1">
+              <div id="u138_div" class=""></div>
+              <div id="u138_text" class="text ">
+                <p><span>결제수단 : 휴대폰</span></p><p><span>결제수단 상세 : 010-****-1234</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u137_state1" class="panel_state" data-label="신카" style="visibility: hidden;">
+          <div id="u137_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u139" class="ax_default heading_1">
+              <div id="u139_div" class=""></div>
+              <div id="u139_text" class="text ">
+                <p><span>결제수단 : 신용카드</span></p><p><span>결제수단 상세 : 현대카드</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u137_state2" class="panel_state" data-label="포인트" style="visibility: hidden;">
+          <div id="u137_state2_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u140" class="ax_default heading_1">
+              <div id="u140_div" class=""></div>
+              <div id="u140_text" class="text ">
+                <p><span>결제수단 : TV포인트</span></p><p><span>결제수단 상세 : ?????????</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u179" class="ax_default line">
-        <img id="u179_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u179.png"/>
+      <!-- Unnamed (Image) -->
+      <div id="u141" class="ax_default image">
+        <img id="u141_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u141.png"/>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u142" class="ax_default image">
+        <img id="u142_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u142.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u180" class="ax_default heading_1">
-        <div id="u180_div" class=""></div>
-        <div id="u180_text" class="text ">
-          <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
+      <div id="u143" class="ax_default box_1">
+        <div id="u143_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u144" class="ax_default box_1">
+        <img id="u144_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u129.png"/>
+      </div>
+
+      <!-- 사용중인 이용권(정기) (Dynamic Panel) -->
+      <div id="u145" class="ax_default" data-label="사용중인 이용권(정기)">
+        <div id="u145_state0" class="panel_state" data-label="휴대푠" style="">
+          <div id="u145_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u146" class="ax_default heading_1">
+              <div id="u146_div" class=""></div>
+              <div id="u146_text" class="text ">
+                <p><span>결제수단 : 휴대폰 정기결제</span></p><p><span>결제수단 상세 : 010-****-1234</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u145_state1" class="panel_state" data-label="신카" style="visibility: hidden;">
+          <div id="u145_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u147" class="ax_default heading_1">
+              <div id="u147_div" class=""></div>
+              <div id="u147_text" class="text ">
+                <p><span>결제수단 : 신용카드 정기결제</span></p><p><span>결제수단 상세 : 현대카드</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u145_state2" class="panel_state" data-label="포인트" style="visibility: hidden;">
+          <div id="u145_state2_content" class="panel_state_content">
+
+            <!-- Unnamed (Rectangle) -->
+            <div id="u148" class="ax_default heading_1">
+              <div id="u148_div" class=""></div>
+              <div id="u148_text" class="text ">
+                <p><span>결제수단 : TV포인트</span></p><p><span>결제수단 상세 : ?????????</span></p><p><span>결제예정금액 : 8,900원 (VAT별도)</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u181" class="ax_default box_1">
-        <img id="u181_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u181.png"/>
-        <div id="u181_text" class="text ">
-          <p><span>사용중인 이용권</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u182" class="ax_default line">
-        <img id="u182_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u178.png"/>
+      <div id="u149" class="ax_default box_1">
+        <div id="u149_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u183" class="ax_default box_1">
-        <img id="u183_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u181.png"/>
-        <div id="u183_text" class="text ">
-          <p><span>보관중인 이용권</span></p>
-        </div>
+      <div id="u150" class="ax_default box_1">
+        <div id="u150_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u184" class="ax_default heading_1">
-        <div id="u184_div" class=""></div>
-        <div id="u184_text" class="text ">
-          <p><span>보관중인 이용권이 없습니다.</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u185" class="ax_default box_1">
-        <div id="u185_div" class=""></div>
-        <div id="u185_text" class="text ">
-          <p><span>이용권구매</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u186" class="ax_default box_1">
-        <div id="u186_div" class=""></div>
-        <div id="u186_text" class="text ">
-          <p><span>쿠폰 등록하기</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Ellipse) -->
-      <div id="u187" class="ax_default ellipse">
-        <img id="u187_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u187.png"/>
-        <div id="u187_text" class="text ">
-          <p><span>X</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u188" class="ax_default paragraph">
-        <div id="u188_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u189" class="ax_default box_1">
-        <div id="u189_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u190" class="ax_default box_1">
-        <div id="u190_div" class=""></div>
-        <div id="u190_text" class="text ">
+      <div id="u151" class="ax_default box_1">
+        <div id="u151_div" class=""></div>
+        <div id="u151_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u190_ann" class="annotation"></div>
+      <div id="u151_ann" class="annotation"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u191" class="ax_default box_1">
-        <div id="u191_div" class=""></div>
-        <div id="u191_text" class="text ">
-          <p><span>CASE : 횟수 제한이 있는 다운로드 &amp; PPS 상품 이용시, 잔여 곡 수 항목 추가 노출</span></p>
+      <div id="u152" class="ax_default box_1">
+        <div id="u152_div" class=""></div>
+        <div id="u152_text" class="text ">
+          <p><span>CASE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [footnote] -->
+      <div id="u152_ann" class="annotation"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u153" class="ax_default box_1">
+        <img id="u153_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u153.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u154" class="ax_default heading_1">
+        <div id="u154_div" class=""></div>
+        <div id="u154_text" class="text ">
+          <p><span>듣기+ 스마트폰 저장</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u155" class="ax_default box_1">
+        <img id="u155_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u155.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u156" class="ax_default box_1">
+        <img id="u156_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u155.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u157" class="ax_default heading_1">
+        <div id="u157_div" class=""></div>
+        <div id="u157_text" class="text ">
+          <p><span>MP3 저장 잔여 곡 수 : 86곡</span></p><p><span>이용기간 : 2018.05.30~2018.06.30</span></p><p><span>(31일 남음)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u158" class="ax_default heading_1">
+        <div id="u158_div" class=""></div>
+        <div id="u158_text" class="text ">
+          <p><span>스마트폰 저장 잔여 곡 수 : 65곡</span></p><p><span>이용기간 : 2018.05.08~2018.06.07</span></p><p><span>(8일 남음)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u159" class="ax_default box_1">
+        <div id="u159_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u160" class="ax_default box_1">
+        <div id="u160_div" class=""></div>
+        <div id="u160_text" class="text ">
+          <p><span>CASE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) [footnote] -->
+      <div id="u160_ann" class="annotation"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u161" class="ax_default heading_1">
+        <div id="u161_div" class=""></div>
+        <div id="u161_text" class="text ">
+          <p><span>- 차후 진행 예정 - </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u162" class="ax_default heading_1">
+        <div id="u162_div" class=""></div>
+        <div id="u162_text" class="text ">
+          <p><span>- 차후 진행 예정 - </span></p>
         </div>
       </div>
     </div>
